--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/joshua/Desktop/Chicken-Disease-Classification/research'"
+       "'/home/muzuvajoshua/Desktop/Chicken-Disease-Classification/research'"
       ]
      },
      "execution_count": 1,
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/joshua/Desktop/Chicken-Disease-Classification'"
+       "'/home/muzuvajoshua/Desktop/Chicken-Disease-Classification'"
       ]
      },
      "execution_count": 2,
@@ -44,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'chicken (Python 3.8.20)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/home/muzuvajoshua/Desktop/Chicken-Disease-Classification/chicken/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import zipfile\n",
